# pyito

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  benchmark.py  pyproject.toml  setup.py
docs/docs/source/: conf.py  index.rst
docs/source/: conf.py  index.rst
docs/source/api/: core.rst  kernels.rst
examples/: basic_gbm.py  ornstein_uhlenbeck.py
pyito/: __init__.py  compiler.py  core.py  kernels.py  noise.py  types.py  utils.py
tests/: test_comprehensive.py  test_correlated.py  test_gbm.py  visual_tests.py
