[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyito"
version = "0.1.0"
description = "High-performance SDE solver with JIT compilation and parallel execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RR"}
]
keywords = ["sde", "stochastic", "quant", "numba", "monte carlo", "finance", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "build",
    "twine",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
benchmark = [
    "sdeint>=0.2.1",
    "matplotlib>=3.5",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/rrawatt/pyito"
Documentation = "https://pyito.readthedocs.io"
Repository = "https://github.com/rrawatt/pyito"
"Bug Tracker" = "https://github.com/rrawatt/pyito/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyito*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pyito --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false